# solana-mev

./: .gitignore  DEX_MAINTENANCE.md  LICENSE  MEV_ANALYSIS_SUMMARY.md  README.md  USAGE.md  arges381165825.json  detect_mev.py  extract_swap_transactions.py  filter_swaps.py  mev_analysis.json  plot_mev.py  pono381165825.json  pono381165825.txt  swap_analysis_summary.md  swap_transactions.json  test_logic.md  transaction65hvh.json  tx65hvh
.cargo/: audit.toml
.github/workflows/: rust.yml
arges/: Cargo.toml  FIXES_SUMMARY.md  README.md  README_24H_ANALYSIS.md  VALIDATION_EXAMPLE.md  VALIDATION_GUIDE.md  analyze_multiple_blocks.rs  analyze_single_tx.rs  mev_analysis_output.txt  mev_slot_381165825.json  test_ui_parsed.rs
arges/examples/: analyze_slot.rs
arges/src/: fetcher.rs  lib.rs  main.rs  mev.rs  price_oracle.rs  report.rs  types.rs
arges/src/dex/: common.rs  jupiter.rs  mod.rs  orca.rs  parser.rs  phoenix.rs  raydium.rs
arges/src/jito/: bundle.rs  mod.rs  tips.rs
arges/src/mev/: adaptive.rs  analyzer.rs  arbitrage.rs  cex_dex.rs  classifier.rs  detector.rs  instruction_parser.rs  jit.rs  liquidation.rs  mod.rs  parser.rs  registry.rs  sandwich.rs  types.rs
arges/src/network/: mod.rs  monitor.rs  (+1 more)
pono/: Cargo.toml  MEV_TRACKING.md  PERFORMANCE_OPTIMIZATIONS.md  README.md
pono/.cargo/: audit.toml
pono/src/: dex.rs  fetcher.rs  lib.rs  main.rs  mev.rs  oracle.rs  price_oracle.rs  report.rs  stream.rs  swap.rs  tokens.rs
pono/src/detectors/: mod.rs
pono/src/parsers/: mod.rs  swap.rs
pono/src/types/: block.rs  mev.rs  mod.rs  swap.rs  token.rs
(+10 files in other folders)
