[package]
name = "pono"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "pono"
path = "src/bin/pono.rs"

[dependencies]
solana-client = "2.1"
solana-pubsub-client = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
dashmap = "6.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1